<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.runsecure.hkdfguard</groupId>
  <artifactId>hkdfguard-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>HkdfGuard</name>
  <description>A TPM backed Key Derivation and Cryptographic secrets protection library for Java. Ported from the original C#.</description>
  <url>https://github.com/runsecure/HkdfGuard-Java</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <modules>
    <module>hkdfguard-diagnostics</module>
    <module>hkdfguard-abstractions</module>
    <module>hkdfguard-keywrapping-v1</module>
    <module>hkdfguard-cryptosession-aesgcm256</module>
    <module>hkdfguard-dataencryptionkey</module>
    <module>hkdfguard-cache</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>

    <opentelemetry.version>1.51.0</opentelemetry.version>
    <slf4j.version>2.0.17</slf4j.version>
    <jna.version>5.17.0</jna.version>
    <bouncycastle.version>1.80</bouncycastle.version>
    <junit.version>5.12.2</junit.version>
    <mockito.version>5.18.0</mockito.version>

    <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Intra-project modules -->
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-diagnostics</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-abstractions</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-keywrapping-v1</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-cryptosession-aesgcm256</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-dataencryptionkey</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.runsecure.hkdfguard</groupId>
        <artifactId>hkdfguard-cache</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Native library binding -->
      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna</artifactId>
        <version>${jna.version}</version>
      </dependency>

      <!-- Cryptography -->
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk18on</artifactId>
        <version>${bouncycastle.version}</version>
      </dependency>

      <!-- OpenTelemetry -->
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-api</artifactId>
        <version>${opentelemetry.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-sdk</artifactId>
        <version>${opentelemetry.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-sdk-testing</artifactId>
        <version>${opentelemetry.version}</version>
        <scope>test</scope>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
